--- a/.github/workflows/long-time-test.yaml
+++ b/.github/workflows/long-time-test.yaml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Set pending to commit status
         uses: myrotvorets/set-commit-status-action@v2.0.0
+        with:
+          sha: ${{ github.sha }}
   e2e:
     name: e2e
     runs-on: ubuntu-latest
@@ -29,4 +31,5 @@ jobs:
       - name: Set final commit status
         uses: myrotvorets/set-commit-status-action@v2.0.0
         with:
+          sha: ${{ github.sha }}
           status: ${{ needs.e2e.result }}
