--- a/.github/workflows/handle_pr_comments.yaml
+++ b/.github/workflows/handle_pr_comments.yaml
@@ -14,11 +14,10 @@ jobs:
     if: github.event.issue.pull_request && startsWith(github.event.comment.body, '/test')
     runs-on: ubuntu-latest
     steps:
-      # - run: |
-      #     echo github.event
-      #     echo '${{ toJSON(github.event) }}'
-      #     echo github
-      #     echo '${{ toJSON(github) }}'
+      - name: display github context
+        run: |
+          echo github
+          echo '${{ toJSON(github) }}'
       - uses: actions/checkout@v4
       - name: trigger e2e
         env:
