--- a/.github/workflows/long-time-test.yaml
+++ b/.github/workflows/long-time-test.yaml
@@ -22,6 +22,7 @@ jobs:
     needs: commit-status-start # 実際にはe2eのstepの方が長くなるのは自明なのでいらないはず
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - run: echo "this step very very long e2e test"
   commit-status-final:
     if: always()
