--- a/.github/workflows/long-time-test-failure.yaml
+++ b/.github/workflows/long-time-test-failure.yaml
@@ -27,8 +27,8 @@ jobs:
           echo "this step very very long e2e test"
           false
   e2e-hoge:
-    name: e2e
-    needs: commit-status-start # 実際にはe2eのstepの方が長くなるのは自明なのでいらないはず
+    name: e2e-hoge
+    needs: commit-status-start # 実際にはe2e-hogeのstepの方が長くなるのは自明なのでいらないはず
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -42,8 +42,16 @@ jobs:
       - e2e-hoge
     runs-on: ubuntu-latest
     steps:
+      - name: Get final status
+        id: final-status
+        run: |
+          if "${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') || contains(needs.*.result, 'skipped') }}"; then
+            echo "result=failure" >> $GITHUB_OUTPUT
+          else
+            echo "result=success" >> $GITHUB_OUTPUT
+          fi
       - name: Set final commit status
         uses: myrotvorets/set-commit-status-action@v2.0.0
         with:
           sha: ${{ github.sha }}
-          status: ${{ needs.e2e.result && needs.e2e-hoge.result }}
+          status: ${{ steps.final-status.outputs.result }}
