--- a/.github/workflows/long-time-test.yaml
+++ b/.github/workflows/long-time-test.yaml
@@ -24,14 +24,32 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: echo "this step very very long e2e test"
+  e2e-hoge:
+    name: e2e-hoge
+    needs: commit-status-start # 実際にはe2e-hogeのstepの方が長くなるのは自明なのでいらないはず
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: |
+          echo "this step very very long e2e-hoge test"
   commit-status-final:
     if: always()
     name: Commit Status Final
-    needs: e2e
+    needs:
+      - e2e
+      - e2e-hoge
     runs-on: ubuntu-latest
     steps:
+      - name: Get final status
+        id: final-status
+        run: |
+          if "${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') || contains(needs.*.result, 'skipped') }}"; then
+            echo "result=failure" >> $GITHUB_OUTPUT
+          else
+            echo "result=success" >> $GITHUB_OUTPUT
+          fi
       - name: Set final commit status
         uses: myrotvorets/set-commit-status-action@v2.0.0
         with:
           sha: ${{ github.sha }}
-          status: ${{ needs.e2e.result }}
+          status: ${{ steps.final-status.outputs.result }}
