display github context in each job
Signed-off-by: kouki <kouworld0123@gmail.com>

--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -9,3 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: echo "test topic branch"
+      - name: display github context
+        run: |
+          echo github
+          echo '${{ toJSON(github) }}'
