--- a/.github/workflows/long-time-test.yaml
+++ b/.github/workflows/long-time-test.yaml
@@ -17,6 +17,10 @@ jobs:
         uses: myrotvorets/set-commit-status-action@v2.0.0
         with:
           sha: ${{ github.sha }}
+      - name: display github context
+        run: |
+          echo github
+          echo '${{ toJSON(github) }}'
   e2e:
     name: e2e
     needs: commit-status-start # 実際にはe2eのstepの方が長くなるのは自明なのでいらないはず
