--- a/.github/workflows/long-time-test.yaml
+++ b/.github/workflows/long-time-test.yaml
@@ -39,7 +39,7 @@ jobs:
         run: |
           # github.event_name = workflow_dispatch → refs/remotes/pull/<pull_request_number>/merge
           # github.event_name push → github.ref
-          if ${{ github.event_name = 'workflow_dispatch' }};then
+          if ${{ github.event_name == 'workflow_dispatch' }};then
             PR_number=$(gh pr view --json number -q .number)
             echo "github_ref=refs/remotes/pull/${PR_number}/merge" >> $GITHUB_OUTPUT
           else
