--- a/.github/workflows/long-time-test.yaml
+++ b/.github/workflows/long-time-test.yaml
@@ -32,6 +32,7 @@ jobs:
     outputs:
       github_ref: ${{ steps.extract.outputs.github_ref }}
     steps:
+      - uses: actions/checkout@v4
       - name: Extract github.ref
         id: extract
         env:
