--- a/.github/workflows/long-time-test-failure.yaml
+++ b/.github/workflows/long-time-test-failure.yaml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set pending to commit status
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           gh api \
             --method POST \
@@ -58,7 +60,15 @@ jobs:
             echo "result=success" >> $GITHUB_OUTPUT
           fi
       - name: Set final commit status
-        uses: myrotvorets/set-commit-status-action@v2.0.0
-        with:
-          sha: ${{ github.sha }}
-          status: ${{ steps.final-status.outputs.result }}
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          gh api \
+            --method POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /repos/${{ github.repository }}/statuses/${{ github.sha }} \
+            -f state='${{ steps.final-status.outputs.result }}' \
+            -f target_url='${{github.server_url}}/${{ github.repository }}/actions/runs/${{ github.run_id }}' \
+            -f description='${{ steps.final-status.outputs.result }}' \
+            -f context='${{ github.workflow }}'
