--- a/.github/workflows/sete.yaml
+++ b/.github/workflows/sete.yaml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: extract
+        continue-on-error: true
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
