--- a/.github/workflows/sete.yaml
+++ b/.github/workflows/sete.yaml
@@ -13,7 +13,7 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          set -e
+          set +e
           PR_number=$(gh pr view --json number -q .number)
           if [ $? == 0 ];then
             echo "github_ref=refs/pull/${PR_number}/merge" >> $GITHUB_OUTPUT
