--- a/.github/workflows/sete.yaml
+++ b/.github/workflows/sete.yaml
@@ -9,7 +9,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: extract
-        continue-on-error: true
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
@@ -20,4 +19,4 @@ jobs:
           else
             echo "github_ref=${{ github.ref }}" >> $GITHUB_OUTPUT
           fi
-          echo "PR_number=${PR_NUMBER}"
+          echo "${outputs.github_ref}"
