--- a/.github/workflows/handle_pr_comments.yaml
+++ b/.github/workflows/handle_pr_comments.yaml
@@ -14,21 +14,25 @@ jobs:
     name: "Check permission"
     if: github.event.issue.pull_request && startsWith(github.event.comment.body, '/test')
     runs-on: ubuntu-22.04
+    outputs:
+      continue: ${{ steps.check_permission.outputs.continue }}
     steps:
       - name: check permission
+        id: check_permission
         run: |
           allow_permissions=('OWNER', "COLLABORATOR", "MEMBER")
+          echo "user association is ${{ github.event.comment.author_association }}"
           if echo "${allow_permissions[@]}" | grep -qw "${{ github.event.comment.author_association }}"; then
             echo "ok"
+            echo "continue=true" >> $GITHUB_OUTPUT
           else
             echo "skip"
-            echo "user association is ${{ github.event.comment.author_association }}"
             echo "To trigger the e2e test, the user must be an OWNER, COLLABORATOR, or MEMBER."
-            exit 1
+            echo "continue=false" >> $GITHUB_OUTPUT
           fi
   run_test:
     name: "Run e2e test"
-    if: github.event.issue.pull_request && startsWith(github.event.comment.body, '/test')
+    if: needs.check_permission.outputs.continue
     needs: check_permission
     runs-on: ubuntu-latest
     steps:
