Fixed because true or false is always true if it is a string
Signed-off-by: kouki <kouworld0123@gmail.com>

--- a/.github/workflows/handle_pr_comments.yaml
+++ b/.github/workflows/handle_pr_comments.yaml
@@ -32,7 +32,7 @@ jobs:
           fi
   run_test:
     name: "Run e2e test"
-    if: needs.check_permission.outputs.continue
+    if: ${{ needs.check_permission.outputs.continue }}
     needs: check_permission
     runs-on: ubuntu-latest
     steps:
