--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -1,5 +1,6 @@
 name: onPR
 on:
+  push:
   pull_request:
 
 jobs:
@@ -13,3 +14,15 @@ jobs:
         run: |
           echo github
           echo '${{ toJSON(github) }}'
+  test2:
+    name: test2
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: exit1
+  completed:
+    name: completed
+    runs-on: ubuntu-latest
+    needs:
+      - test
+      - test2
